--- a/index.html
+++ b/index.html
@@ -241,36 +241,49 @@
     </section>
  
 
-    <!-- About Section -->
-    
-    <!-- About Section -->
-    <section id="about" class="py-16 bg-white dark:bg-gray-800">
-        <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center text-gray-800 dark:text-white mb-12" data-ar="عن الشركة" data-en="About Company">عن الشركة</h2>
-            <div class="max-w-4xl mx-auto">
-                <p class="text-lg text-gray-600 dark:text-gray-300 text-center leading-relaxed" data-ar="تأسست شركة عمر الجعفري للإستيراد في عام 2020 لتلبية احتياجات السوق من المواد الغذائية عالية الجودة. نحن متخصصون في استيراد مجموعة متنوعة من المنتجات، بما في ذلك المواد الغذائية، مستلزمات الأطفال، الأدوية، والأجهزة والمستلزمات الطبية." data-en="Omar Al-Jaafari Import Company was established in 2020 to meet market needs for high-quality food products. We specialize in importing a variety of products, including food items, baby supplies, medicines, and medical equipment.">تأسست شركة عمر الجعفري للإستيراد في عام 2020 لتلبية احتياجات السوق من المواد الغذائية عالية الجودة. نحن متخصصون في استيراد مجموعة متنوعة من المنتجات، بما في ذلك المواد الغذائية، مستلزمات الأطفال، الأدوية، والأجهزة والمستلزمات الطبية.</p>
-                
-                <div class="grid md:grid-cols-4 gap-6 mt-12">
-                    <div class="text-center">
-                        <i class="fas fa-utensils text-4xl text-purple-600 mb-4"></i>
-                        <h3 class="font-bold text-gray-800 dark:text-white" data-ar="المواد الغذائية" data-en="Food Products">المواد الغذائية</h3>
-                    </div>
-                    <div class="text-center">
-                        <i class="fas fa-baby text-4xl text-purple-600 mb-4"></i>
-                        <h3 class="font-bold text-gray-800 dark:text-white" data-ar="مستلزمات الأطفال" data-en="Baby Supplies">مستلزمات الأطفال</h3>
-                    </div>
-                    <div class="text-center">
-                        <i class="fas fa-pills text-4xl text-purple-600 mb-4"></i>
-                        <h3 class="font-bold text-gray-800 dark:text-white" data-ar="الأدوية" data-en="Medicines">الأدوية</h3>
-                    </div>
-                    <div class="text-center">
-                        <i class="fas fa-stethoscope text-4xl text-purple-600 mb-4"></i>
-                        <h3 class="font-bold text-gray-800 dark:text-white" data-ar="المستلزمات الطبية" data-en="Medical Equipment">المستلزمات الطبية</h3>
-                    </div>
-                </div>
-            </div>
+ <!-- About Section -->
+<section id="about" class="py-16 bg-white dark:bg-gray-800">
+  <div class="container mx-auto px-4">
+    <h2 class="text-3xl font-bold text-center text-gray-800 dark:text-white mb-12" data-ar="عن الشركة" data-en="About Company">
+      عن الشركة
+    </h2>
+
+    <div class="flex flex-col md:flex-row md:items-center md:gap-10">
+      <!-- الصورة في اليسار (تأتي أولاً في flex row-reverse في RTL) -->
+      <div class="md:w-1/2 mb-8 md:mb-0">
+        <img src="img/panel.jpg" alt="صورة الشركة" class="w-full h-auto rounded-xl shadow-lg">
+      </div>
+
+      <!-- النص -->
+      <div class="md:w-1/2">
+        <p class="text-lg text-gray-600 dark:text-gray-300 leading-relaxed mb-6 text-center md:text-right" data-ar="تأسست شركة عمر الجعفري للإستيراد في عام 2020..." data-en="Omar Al-Jaafari Import Company was established in 2020...">
+          تأسست شركة عمر الجعفري للإستيراد في عام 2020 لتلبية احتياجات السوق من المواد الغذائية عالية الجودة. نحن متخصصون في استيراد مجموعة متنوعة من المنتجات، بما في ذلك المواد الغذائية، مستلزمات الأطفال، الأدوية، والأجهزة والمستلزمات الطبية.
+        </p>
+
+        <!-- الأيقونات -->
+        <div class="grid grid-cols-2 sm:grid-cols-4 gap-6 text-center">
+          <div>
+            <i class="fas fa-utensils text-4xl text-purple-600 mb-2"></i>
+            <h3 class="font-bold text-gray-800 dark:text-white" data-ar="المواد الغذائية" data-en="Food Products">المواد الغذائية</h3>
+          </div>
+          <div>
+            <i class="fas fa-baby text-4xl text-purple-600 mb-2"></i>
+            <h3 class="font-bold text-gray-800 dark:text-white" data-ar="مستلزمات الأطفال" data-en="Baby Supplies">مستلزمات الأطفال</h3>
+          </div>
+          <div>
+            <i class="fas fa-pills text-4xl text-purple-600 mb-2"></i>
+            <h3 class="font-bold text-gray-800 dark:text-white" data-ar="الأدوية" data-en="Medicines">الأدوية</h3>
+          </div>
+          <div>
+            <i class="fas fa-stethoscope text-4xl text-purple-600 mb-2"></i>
+            <h3 class="font-bold text-gray-800 dark:text-white" data-ar="المستلزمات الطبية" data-en="Medical Equipment">المستلزمات الطبية</h3>
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 <!-- Products Section -->
 <section id="products" class="py-16 bg-gray-50 dark:bg-gray-900">
