--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                   2px 2px 2px rgba(0,0,0,0.3),
                   3px 3px 5px rgba(0,0,0,0.2);
                 ">
-              شركة عمر الجعفري للاستيراد
+               عمر الجعفري للاستيراد
             </h1>
             <h2 class="text-purple-700 dark:text-purple-400 text-lg sm:text-xl font-semibold tracking-wide mt-1"
               style="
@@ -208,7 +208,7 @@
                   1px 1px 0 #ddd,
                   2px 2px 3px rgba(0,0,0,0.15);
               ">
-              Omar Al-Jaafari Import Company
+              Omar Al-Jaafari Import 
             </h2>
           </div>
         </a>
