--- a/index.html
+++ b/index.html
@@ -180,107 +180,93 @@
 </head>
 <body class="bg-gradient-to-br from-purple-50 to-blue-50 dark:from-gray-900 dark:to-gray-800 min-h-screen">
     <!-- Header -->
-    <header class="bg-white dark:bg-gray-900 shadow-md sticky top-0 z-50">
-      <div class="container mx-auto px-4 py-4 flex items-center justify-between">
-        <a href="#home" class="flex items-center space-x-4 rtl:space-x-reverse">
-          <!-- الشعار -->
-          <div
-            class="w-16 h-16 rounded-full overflow-hidden bg-gray-200 dark:bg-gray-700 flex items-center justify-center shadow-lg">
-            <img src="img/Logo_Omar_Al-Jaafari.jpg" alt=" شركة عمر الجعفري" class="object-cover w-full h-full"
-              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
-            <div class="hidden text-white text-xs font-semibold text-center px-2" style="display: none;">شعار الشركة</div>
-          </div>
-
-          <!-- النص -->
-          <div class="text-left">
-            <h1 class="text-gray-900 dark:text-white text-2xl sm:text-3xl font-extrabold leading-tight"
-              style="
-                text-shadow:
-                  1px 1px 0 #bbb,
-                  2px 2px 2px rgba(0,0,0,0.3),
-                  3px 3px 5px rgba(0,0,0,0.2);
-                ">
-               عمر الجعفري للاستيراد
-            </h1>
-            <h2 class="text-purple-700 dark:text-purple-400 text-lg sm:text-xl font-semibold tracking-wide mt-1"
-              style="
-                text-shadow:
-                  1px 1px 0 #ddd,
-                  2px 2px 3px rgba(0,0,0,0.15);
-              ">
-              Omar Al-Jaafari Import 
-            </h2>
-          </div>
-        </a>
-
-        <!-- أزرار اللغة والقائمة -->
-        <div class="flex items-center gap-3">
-          <!-- زر اللغة -->
-          <button id="langToggle"
-            class="hidden sm:flex items-center gap-2 bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-lg font-semibold transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-purple-400"
-            aria-label="تبديل اللغة">
-            <i class="fas fa-language"></i>
-            <span>English</span>
-          </button>
-
-          <!-- زر القائمة للجوال -->
-          <button id="menuToggle"
-            class="sm:hidden text-gray-800 dark:text-gray-200 text-3xl focus:outline-none focus:ring-2 focus:ring-purple-400 rounded"
-            aria-label="فتح القائمة">
-            <i class="fas fa-bars"></i>
-          </button>
-        </div>
+<header class="bg-white dark:bg-gray-900 shadow-md sticky top-0 z-50">
+  <div class="container mx-auto px-4 py-4 flex items-center justify-between">
+    <!-- شعار + نص -->
+    <a href="#home" class="flex flex-col-reverse sm:flex-row items-center text-center sm:text-left gap-3 sm:gap-4 rtl:space-x-reverse">
+      
+      <!-- النص -->
+      <div>
+        <h1 class="text-gray-900 dark:text-white text-xl sm:text-2xl lg:text-3xl font-extrabold leading-tight"
+          style="text-shadow: 1px 1px 0 #bbb, 2px 2px 2px rgba(0,0,0,0.3), 3px 3px 5px rgba(0,0,0,0.2);">
+          عمر الجعفري للاستيراد
+        </h1>
+        <h2 class="text-purple-700 dark:text-purple-400 text-base sm:text-lg lg:text-xl font-semibold tracking-wide mt-1"
+          style="text-shadow: 1px 1px 0 #ddd, 2px 2px 3px rgba(0,0,0,0.15);">
+          Omar Al-Jaafari Import
+        </h2>
       </div>
 
-      <!-- قائمة التنقل للأجهزة الكبيرة -->
-      <nav id="desktopMenu"
-        class="hidden sm:flex flex-col sm:flex-row sm:items-center sm:justify-center sm:gap-8 bg-white dark:bg-gray-900 px-4 py-4 sm:p-0 border-t border-gray-200 dark:border-gray-700">
-        <a href="#home"
-          class="nav-item flex items-center gap-2 text-gray-700 dark:text-gray-300 hover:text-purple-600 font-medium transition-colors duration-300 py-2 sm:py-0">
-          <i class="fas fa-home"></i> الرئيسية
-        </a>
-        <a href="#about"
-          class="nav-item flex items-center gap-2 text-gray-700 dark:text-gray-300 hover:text-purple-600 font-medium transition-colors duration-300 py-2 sm:py-0">
-          <i class="fas fa-building"></i> عن الشركة
-        </a>
-        <a href="#products"
-          class="nav-item flex items-center gap-2 text-gray-700 dark:text-gray-300 hover:text-purple-600 font-medium transition-colors duration-300 py-2 sm:py-0">
-          <i class="fas fa-box-open"></i> المنتجات
-        </a>
-        <a href="#other-products"
-          class="nav-item flex items-center gap-2 text-gray-700 dark:text-gray-300 hover:text-purple-600 font-medium transition-colors duration-300 py-2 sm:py-0">
-          <i class="fas fa-th-list"></i> منتجاتنا الأخرى
-        </a>
-        <a href="#contact"
-          class="nav-item flex items-center gap-2 text-gray-700 dark:text-gray-300 hover:text-purple-600 font-medium transition-colors duration-300 py-2 sm:py-0">
-          <i class="fas fa-envelope"></i> اتصل بنا
-        </a>
-      </nav>
+      <!-- الشعار -->
+      <div class="w-24 h-24 sm:w-16 sm:h-16 rounded-full overflow-hidden bg-gray-200 dark:bg-gray-700 flex items-center justify-center shadow-lg">
+        <img src="img/Logo_Omar_Al-Jaafari.jpg" alt="شركة عمر الجعفري" class="object-cover w-full h-full"
+          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
+        <div class="hidden text-white text-xs font-semibold text-center px-2" style="display: none;">شعار الشركة</div>
+      </div>
+    </a>
 
-      <!-- قائمة الجوال المنسدلة -->
-      <nav id="mobileMenuDropdown" class="sm:hidden bg-white dark:bg-gray-900 border-t border-gray-200 dark:border-gray-700 px-4 py-3 hidden flex-col">
-        <a href="#home"
-          class="block py-3 px-2 text-gray-700 dark:text-gray-300 hover:bg-purple-50 dark:hover:bg-purple-700 rounded transition-colors duration-200">
-          <i class="fas fa-home ml-2"></i> الرئيسية
-        </a>
-        <a href="#about"
-          class="block py-3 px-2 text-gray-700 dark:text-gray-300 hover:bg-purple-50 dark:hover:bg-purple-700 rounded transition-colors duration-200">
-          <i class="fas fa-building ml-2"></i> عن الشركة
-        </a>
-        <a href="#products"
-          class="block py-3 px-2 text-gray-700 dark:text-gray-300 hover:bg-purple-50 dark:hover:bg-purple-700 rounded transition-colors duration-200">
-          <i class="fas fa-box-open ml-2"></i> المنتجات
-        </a>
-        <a href="#other-products"
-          class="block py-3 px-2 text-gray-700 dark:text-gray-300 hover:bg-purple-50 dark:hover:bg-purple-700 rounded transition-colors duration-200">
-          <i class="fas fa-th-list ml-2"></i> منتجاتنا الأخرى
-        </a>
-        <a href="#contact"
-          class="block py-3 px-2 text-gray-700 dark:text-gray-300 hover:bg-purple-50 dark:hover:bg-purple-700 rounded transition-colors duration-200">
-          <i class="fas fa-envelope ml-2"></i> اتصل بنا
-        </a>
-      </nav>
-    </header>
+    <!-- أزرار اللغة والقائمة -->
+    <div class="flex items-center gap-3">
+      <!-- زر اللغة -->
+      <button id="langToggle"
+        class="hidden sm:flex items-center gap-2 bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-lg font-semibold transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-purple-400"
+        aria-label="تبديل اللغة">
+        <i class="fas fa-language"></i>
+        <span>English</span>
+      </button>
+
+      <!-- زر القائمة للجوال -->
+      <button id="menuToggle"
+        class="sm:hidden text-gray-800 dark:text-gray-200 text-3xl focus:outline-none focus:ring-2 focus:ring-purple-400 rounded"
+        aria-label="فتح القائمة">
+        <i class="fas fa-bars"></i>
+      </button>
+    </div>
+  </div>
+
+  <!-- قائمة التنقل للأجهزة الكبيرة -->
+  <nav id="desktopMenu"
+    class="hidden sm:flex flex-col sm:flex-row sm:items-center sm:justify-center sm:gap-8 bg-white dark:bg-gray-900 px-4 py-4 sm:p-0 border-t border-gray-200 dark:border-gray-700">
+    <a href="#home" class="nav-item flex items-center gap-2 text-gray-700 dark:text-gray-300 hover:text-purple-600 font-medium transition-colors duration-300 py-2 sm:py-0">
+      <i class="fas fa-home"></i> الرئيسية
+    </a>
+    <a href="#about" class="nav-item flex items-center gap-2 text-gray-700 dark:text-gray-300 hover:text-purple-600 font-medium transition-colors duration-300 py-2 sm:py-0">
+      <i class="fas fa-building"></i> عن الشركة
+    </a>
+    <a href="#products" class="nav-item flex items-center gap-2 text-gray-700 dark:text-gray-300 hover:text-purple-600 font-medium transition-colors duration-300 py-2 sm:py-0">
+      <i class="fas fa-box-open"></i> المنتجات
+    </a>
+    <a href="#other-products" class="nav-item flex items-center gap-2 text-gray-700 dark:text-gray-300 hover:text-purple-600 font-medium transition-colors duration-300 py-2 sm:py-0">
+      <i class="fas fa-th-list"></i> منتجاتنا الأخرى
+    </a>
+    <a href="#contact" class="nav-item flex items-center gap-2 text-gray-700 dark:text-gray-300 hover:text-purple-600 font-medium transition-colors duration-300 py-2 sm:py-0">
+      <i class="fas fa-envelope"></i> اتصل بنا
+    </a>
+  </nav>
+
+  <!-- قائمة الجوال المنسدلة -->
+  <nav id="mobileMenuDropdown" class="sm:hidden bg-white dark:bg-gray-900 border-t border-gray-200 dark:border-gray-700 px-4 py-3 hidden flex-col">
+    <a href="#home" class="block py-3 px-2 text-gray-700 dark:text-gray-300 hover:bg-purple-50 dark:hover:bg-purple-700 rounded transition-colors duration-200">
+      <i class="fas fa-home ml-2"></i> الرئيسية
+    </a>
+    <a href="#about" class="block py-3 px-2 text-gray-700 dark:text-gray-300 hover:bg-purple-50 dark:hover:bg-purple-700 rounded transition-colors duration-200">
+      <i class="fas fa-building ml-2"></i> عن الشركة
+    </a>
+    <a href="#products" class="block py-3 px-2 text-gray-700 dark:text-gray-300 hover:bg-purple-50 dark:hover:bg-purple-700 rounded transition-colors duration-200">
+      <i class="fas fa-box-open ml-2"></i> المنتجات
+    </a>
+    <a href="#other-products" class="block py-3 px-2 text-gray-700 dark:text-gray-300 hover:bg-purple-50 dark:hover:bg-purple-700 rounded transition-colors duration-200">
+      <i class="fas fa-th-list ml-2"></i> منتجاتنا الأخرى
+    </a>
+    <a href="#contact" class="block py-3 px-2 text-gray-700 dark:text-gray-300 hover:bg-purple-50 dark:hover:bg-purple-700 rounded transition-colors duration-200">
+      <i class="fas fa-envelope ml-2"></i> اتصل بنا
+    </a>
+  </nav>
+</header>
+
+<!-- JavaScript لإغلاق القائمة عند الضغط على أحد الروابط -->
+ 
+
 
     <!-- 3D Section Divider -->
     <div class="w-full relative overflow-hidden" style="height: 60px; max-height: 60px;">
