--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<meta name="google-site-verification" content="aKVhCkVbzhDOze-OBwAjB8tgh_bI_7JVLmLYEBOkKas" />
   <title>شركة عمر الجعفري للاستيراد</title>
 
   <!-- وصف مختصر للموقع -->
