--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="google-site-verification" content="aKVhCkVbzhDOze-OBwAjB8tgh_bI_7JVLmLYEBOkKas" />
-  <title>شركة عمر الجعفري للاستيراد</title>
+  <title> عمر الجعفري للاستيراد</title>
 
   <!-- وصف مختصر للموقع -->
-  <meta name="description" content="شركة عمر الجعفري للاستيراد - جودة عالية وأسعار تنافسية في المنتجات بنكهة النعناع. استورد أفضل المنتجات بجودة مضمونة." />
+  <meta name="description" content=" عمر الجعفري للاستيراد - جودة عالية وأسعار تنافسية في المنتجات بنكهة النعناع. استورد أفضل المنتجات بجودة مضمونة." />
 
   <!-- الكلمات المفتاحية -->
-  <meta name="keywords" content="شركة عمر الجعفري, استيراد, منتجات النعناع, كريمو, كول فريش, مانثول نعناع, منتجات طبيعية, منتجات عالية الجودة" />
+  <meta name="keywords" content=" عمر الجعفري, استيراد, منتجات النعناع, كريمو, كول فريش, مانثول نعناع, منتجات طبيعية, منتجات عالية الجودة" />
 
   <!-- المؤلف -->
-  <meta name="author" content="شركة عمر الجعفري للاستيراد" />
+  <meta name="author" content=" عمر الجعفري للاستيراد" />
 
   <!-- اللغة -->
   <meta http-equiv="Content-Language" content="ar" />
@@ -34,16 +34,16 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
 
   <!-- Open Graph (لتحسين مشاركة الروابط في فيسبوك وتويتر وغيرها) -->
-  <meta property="og:title" content="شركة عمر الجعفري للاستيراد" />
-  <meta property="og:description" content="جودة عالية وأسعار تنافسية في منتجات النعناع من شركة عمر الجعفري." />
+  <meta property="og:title" content=" عمر الجعفري للاستيراد" />
+  <meta property="og:description" content="جودة عالية وأسعار تنافسية في منتجات النعناع من  عمر الجعفري." />
   <meta property="og:image" content="رابط_صورة_الشعار_او_منتجات_الموقع.jpg" />
-  <meta property="og:url" content="https://your-github-username.github.io/your-repo-name/" />
+  <meta property="og:url" content="https://github.com/Omar-Aljaafari/website/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="شركة عمر الجعفري للاستيراد" />
-  <meta name="twitter:description" content="جودة عالية وأسعار تنافسية في منتجات النعناع من شركة عمر الجعفري." />
+  <meta name="twitter:title" content=" عمر الجعفري للاستيراد" />
+  <meta name="twitter:description" content="جودة عالية وأسعار تنافسية في منتجات النعناع من  عمر الجعفري." />
   <meta name="twitter:image" content="رابط_صورة_الشعار_او_منتجات_الموقع.jpg" />
 
   <!-- Sitemap -->
@@ -903,3 +903,4 @@
 
 </body>
 </html>
+
